# cgoprof

./: .gitignore  README.md  cgoprof_work_outline.md  pyproject.toml  run_all.sh
benchmarks/: README.md  run_benchmarks.py
benchmarks/results/: speedups.json  speedups.md
cgoprof/: __init__.py  cli.py  graph.py  models.py  report.py  rules.py  scanner.py
cgoprof/contracts/: __init__.py  annotations.py  c_analysis.py  codec.py  conditions.py  evidence.py  identity.py  inference.py  intrinsics.py  lattice.py  manifest.py  manifest_builder.py  manifest_codec.py  manifest_link.py  manifest_store.py  merge.py  model.py  preamble.py  store.py
docs/: api_identity_manifest.md  contract_inference.md  contract_model.md  real_project_evaluation.md
examples/callback_pingpong/: callback.c  go.mod  main.go
examples/conversion_copy/: main.go
examples/pointer_check/: go.mod  main.go
examples/profiles/: synthetic_all_rules.json
examples/small_calls/: go.mod  main.go
instrumented/conversion_copy/: go.mod  main.go
instrumented/go-sqlite3/: backup.go  callback.go  error.go  go.mod  sqlite3.go  sqlite3_context.go  sqlite3_opt_column_metadata.go  sqlite3_opt_preupdate_hook.go  sqlite3_opt_unlock_notify.go  sqlite3_opt_vtable.go  sqlite3_trace.go  (+1 more)
instrumented/go-sqlite3-v2/: callback.go  sqlite3.go  sqlite3_load_extension.go  sqlite3_opt_serialize.go  sqlite3_opt_unlock_notify.go
real_projects/: .gitignore  projects.json
scripts/: evaluate_real_projects.py
tests/: test_contract_inference.py  test_contracts.py  test_instrumenter.py  test_manifest.py  test_rules.py
(+83 files in other folders)
