[project]
name = "cgoprof"
version = "0.1.0"
description = "Prototype cgo-aware cross-layer profiler and analyzer"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cgoprof = "cgoprof.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cgoprof*"]
